--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="libpng_static" version="1.6.39.1" targetFramework="native" />
+  <package id="libxml2-vc140-static-32_64" version="2.9.4.1" targetFramework="native" />
   <package id="zlib_static" version="1.2.11.9" targetFramework="native" />
 </packages>
