--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,39 @@
-﻿cmake_minimum_required(VERSION 3.28)
+﻿cmake_minimum_required(VERSION 3.20)
 
-project(AurusEngine)
+project(
+  AurusEngine
+  VERSION 0.1
+  LANGUAGES C
+  DESCRIPTION "An C based SRPG FE-GBA Like engine"
+  HOMEPAGE_URL "https://github.com/TypicalCrusader/Aurus-Engine"
+)
 
-set(SDL2_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/include")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/..")
+set(CMAKE_C_STANDARD_REQUIRED C17)
+set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/usr/include/SDL2")
 
-# Support both 32 and 64 bit builds
-if (${CMAKE_SIZEOF_VOID_P} MATCHES 8)
-  set(SDL2_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/lib/x64/SDL2.lib;${CMAKE_CURRENT_LIST_DIR}/lib/x64/SDL2main.lib")
-else ()
-  set(SDL2_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/lib/x86/SDL2.lib;${CMAKE_CURRENT_LIST_DIR}/lib/x86/SDL2main.lib")
-endif ()
 
-string(STRIP "${SDL2_LIBRARIES}" SDL2_LIBRARIES)
+#SDL2
+find_package(SDL2 REQUIRED)
+find_package(SDL2_IMAGE REQUIRED PACKAGE_FIND_VERSION_MIN 2.0.0 )
+find_package(SDL2_mixer REQUIRED)
+include_directories(
+  ${PROJECT_NAME} 
+  ${SDL2MIXER_INCLUDE_DIR}
+  ${SDL2IMAGE_INCLUDE_DIRS}
+  ${SDL2_INCLUDE_DIR}
+) 
 
-add_executable(AurusEngine main.c)
-target_link_libraries(AurusEngine ${SDL2_LIBRARIES})
+#LIBXML
+find_package(LibXml2 REQUIRED)
+include_directories(${PROJECT_NAME} ${LIBXML2_INCLUDE_DIRS}) 
+
+add_executable(AurusEngine ${CMAKE_CURRENT_SOURCE_DIR}/.src/main.c)
+target_link_libraries(
+  ${PROJECT_NAME} 
+  ${SDL2_LIBRARIES} 
+  ${SDL2IMAGE_LIBRARIES} 
+  ${SDL2MIXER_LIBRARIES} 
+  ${LIBXML2_LIBRARIES}
+)
