--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ project(
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/..")
-set(CMAKE_C_STANDARD_REQUIRED C17)
+set(CMAKE_C_STANDARD_REQUIRED 17)
 set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/usr/include/SDL2")
 
 
@@ -20,7 +20,7 @@ find_package(SDL2_IMAGE REQUIRED PACKAGE_FIND_VERSION_MIN 2.0.0 )
 find_package(SDL2_mixer REQUIRED)
 include_directories(
   ${PROJECT_NAME} 
-  ${SDL2MIXER_INCLUDE_DIR}
+  ${SDL2MIXER_INCLUDE_DIRS}
   ${SDL2IMAGE_INCLUDE_DIRS}
   ${SDL2_INCLUDE_DIR}
 ) 
@@ -33,7 +33,8 @@ add_executable(AurusEngine ${CMAKE_CURRENT_SOURCE_DIR}/.src/main.c)
 target_link_libraries(
   ${PROJECT_NAME} 
   ${SDL2_LIBRARIES} 
-  ${SDL2IMAGE_LIBRARIES} 
-  ${SDL2MIXER_LIBRARIES} 
+  #${SDL2IMAGE_LIBRARIES} 
+  SDL2_image
+  SDL2_mixer
   ${LIBXML2_LIBRARIES}
 )
