--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "cmake.configureOnOpen": false,
     "files.associations": {
         "sdl_image.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "xmlreader.h": "c",
+        "stdint.h": "c",
+        "sdl.h": "c",
+        "sdl_mixer.h": "c"
     }
 }
