--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,63 @@
-/.vs/*
-/x64/*
-/CMakeFiles/*
-/build/*
+/.vs/**
+/x64/**
+/CMakeFiles/**
+/build/** 
+/build/.cmake/api/v1/reply/cache-v2-5a3c8c7faf3e296c47d1.json
+/build/.cmake/api/v1/reply/cmakeFiles-v1-040d11ec4afc77a158ba.json
+/build/.cmake/api/v1/reply/codemodel-v2-8c8761a6c5316d4fbb43.json
+/build/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
+/build/.cmake/api/v1/reply/index-2024-04-12T11-02-37-0271.json
+/build/.cmake/api/v1/reply/target-AurusEngine-Debug-405830c11c85f4e401a1.json
+/build/.cmake/api/v1/reply/toolchains-v1-4a90ec4c7cd5765210bd.json
+/build/cmake_install.cmake
+/build/CMakeCache.txt
+/build/CMakeFiles/AurusEngine.dir/build.make
+/build/CMakeFiles/AurusEngine.dir/cmake_clean.cmake
+/build/CMakeFiles/AurusEngine.dir/compiler_depend.internal
+/build/CMakeFiles/AurusEngine.dir/compiler_depend.make
+/build/CMakeFiles/AurusEngine.dir/DependInfo.cmake
+/build/CMakeFiles/AurusEngine.dir/flags.make
+/build/CMakeFiles/AurusEngine.dir/link.txt
+/build/CMakeFiles/AurusEngine.dir/progress.make
+/build/CMakeFiles/CMakeConfigureLog.yaml
+/build/CMakeFiles/CMakeDirectoryInformation.cmake
+/build/CMakeFiles/Makefile.cmake
+/build/CMakeFiles/Makefile2
+/build/CMakeFiles/progress.marks
+/build/CMakeFiles/Progress/1
+/build/CMakeFiles/Progress/2
+/build/CMakeFiles/Progress/3
+/build/CMakeFiles/Progress/count.txt
+/build/CMakeFiles/TargetDirectories.txt
+/build/compile_commands.json
+/build/Makefile
+/build/.cmake/api/v1/reply/cache-v2-5a3c8c7faf3e296c47d1.json
+/build/.cmake/api/v1/reply/cmakeFiles-v1-040d11ec4afc77a158ba.json
+/build/.cmake/api/v1/reply/codemodel-v2-8c8761a6c5316d4fbb43.json
+/build/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
+/build/.cmake/api/v1/reply/index-2024-04-12T11-02-37-0271.json
+/build/.cmake/api/v1/reply/target-AurusEngine-Debug-405830c11c85f4e401a1.json
+/build/.cmake/api/v1/reply/toolchains-v1-4a90ec4c7cd5765210bd.json
+/build/cmake_install.cmake
+/build/CMakeCache.txt
+/build/CMakeFiles/AurusEngine.dir/build.make
+/build/CMakeFiles/AurusEngine.dir/cmake_clean.cmake
+/build/CMakeFiles/AurusEngine.dir/compiler_depend.internal
+/build/CMakeFiles/AurusEngine.dir/compiler_depend.make
+/build/CMakeFiles/AurusEngine.dir/DependInfo.cmake
+/build/CMakeFiles/AurusEngine.dir/flags.make
+/build/CMakeFiles/AurusEngine.dir/link.txt
+/build/CMakeFiles/AurusEngine.dir/progress.make
+/build/CMakeFiles/CMakeConfigureLog.yaml
+/build/CMakeFiles/CMakeDirectoryInformation.cmake
+/build/CMakeFiles/Makefile.cmake
+/build/CMakeFiles/Makefile2
+/build/CMakeFiles/progress.marks
+/build/CMakeFiles/Progress/1
+/build/CMakeFiles/Progress/2
+/build/CMakeFiles/Progress/3
+/build/CMakeFiles/Progress/count.txt
+/build/CMakeFiles/TargetDirectories.txt
+/build/compile_commands.json
+/build/Makefile
+/AurusEngine.exe
