--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "global.h": "c",
         "stdio.h": "c",
         "sdl_image.h": "c",
-        "sdl_mixer.h": "c"
+        "sdl_mixer.h": "c",
+        "map.h": "c"
     },
     "cmake.sourceDirectory": "D:/Programowanie/C/Aurus-Engine/Aurus-Engine"
 }
