added return values to inlined functions also welcome endevour os :)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,5 @@
         "map.h": "c",
         "misc.h": "c"
     },
-    "cmake.sourceDirectory": "D:/Programowanie/C/Aurus-Engine/Aurus-Engine"
+    "cmake.sourceDirectory": "/home/typical/Dokumenty/Aurus-Engine/Aurus-Engine"
 }
