--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,10 +32,10 @@ elseif(LINUX)
   message("Detected Linux as OS")
   set(LIBXML2_INCLUDE_DIR "/usr/include/libxml2")
   if (CMAKE_SIZEOF_VOID_P EQUAL 8)
-    set(LIBXML2_LIBRARIES /usr/lib64/libxml2.so.2.10.4)
+    #set(LIBXML2_LIBRARIES /usr/lib64/libxml2.so.2.10.4)
     message("Detected 64 bit OS")
   elseif (CMAKE_SIZEOF_VOID_P EQUAL 4)
-    set(LIBXML2_LIBRARIES /usr/lib/libxml2.so.2.10.4) 
+    #set(LIBXML2_LIBRARIES /usr/lib/libxml2.so.2.10.4) 
     message("Detected 32 bit OS") 
   else()
     message(FATAL_ERROR "Cannot Detect OS Architecture")   
