--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
         "sdl_image.h": "c",
         "sdl_mixer.h": "c",
         "map.h": "c",
-        "misc.h": "c"
+        "misc.h": "c",
+        "types.h": "c"
     },
-    "cmake.sourceDirectory": "/home/typical/Dokumenty/Aurus-Engine/Aurus-Engine"
+    "cmake.sourceDirectory": "/home/typical/git repos/aurus-engine"
 }
