--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,5 @@
         "misc.h": "c",
         "types.h": "c"
     },
-    "cmake.sourceDirectory": "D:/Programowanie/C/Aurus-Engine/Aurus-Engine"
+    "cmake.sourceDirectory": "C:/Aurus-Engine"
 }
